--- a/fares-service.properties
+++ b/fares-service.properties
@@ -20,7 +20,7 @@ spring.boot.admin.password=admin
 
 fares.discount=20
 
-eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+#eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 
 
 
