--- a/pss-website.properties
+++ b/pss-website.properties
@@ -9,7 +9,7 @@ spring.boot.admin.url=http://localhost:8093
 spring.boot.admin.username=admin
 spring.boot.admin.password=admin
 
-eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+#eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 
 #security.oauth2.resource.loadBalanced=true
 
