--- a/search-service.properties
+++ b/search-service.properties
@@ -25,7 +25,7 @@ spring.boot.admin.password=admin
 
 originairports.shutdown=CHI
 
-eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+#eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 
 #security.user.name=guest
 #security.user.password=guest123
