--- a/search-service.properties
+++ b/search-service.properties
@@ -23,7 +23,7 @@ spring.boot.admin.url=http://localhost:8093
 spring.boot.admin.username=admin
 spring.boot.admin.password=admin
 
-originairports.shutdown=NYC
+originairports.shutdown=CHI
 
 #eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 
