--- a/fares-service.properties
+++ b/fares-service.properties
@@ -21,7 +21,7 @@ spring.boot.admin.password=admin
 
 fares.discount=5
 
-#eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 
 
 
