--- a/pss-website.properties
+++ b/pss-website.properties
@@ -3,7 +3,7 @@ server.port=8001
 security.user.name=guest
 security.user.password=guest123
 
-management.security.enabled=true
+management.security.enabled=false
 
 spring.boot.admin.url=http://localhost:8093
 spring.boot.admin.username=admin
