--- a/pss-website.properties
+++ b/pss-website.properties
@@ -3,13 +3,13 @@ server.port=8001
 security.user.name=guest
 security.user.password=guest123
 
-management.security.enabled=false
+management.security.enabled=true
 
 spring.boot.admin.url=http://localhost:8093
 spring.boot.admin.username=admin
 spring.boot.admin.password=admin
 
-#eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 
 #security.oauth2.resource.loadBalanced=true
 
