--- a/pss-website.properties
+++ b/pss-website.properties
@@ -1,9 +1,9 @@
-server.port=8001
+server.port=9095
 
-security.user.name=guest
-security.user.password=guest123
+#security.user.name=guest
+#security.user.password=guest123
 
-management.security.enabled=true
+#management.security.enabled=true
 
 spring.boot.admin.url=http://localhost:8093
 spring.boot.admin.username=admin
